--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat',sans-serif;
+  letter-spacing: 0.05rem;
+  line-height: 1.4;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3{
+  font-size: 1.5rem;
+}
+h4{
+  font-size: 0.9rem;
+}
+a{
+  color: #333333;
+  text-decoration: none;
+}
+.App{
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
